Add integration service, handlers & client APIs
Expose Asana/ClickUp workspace/project/space APIs and wire them into the router. Adds IntegrationService and IntegrationHandler with new routes, implements GetWorkspaces/GetProjects in Asana client and GetWorkspaces/GetSpaces in ClickUp client, and introduces related types. Refactors MigrationService to use Asana/ClickUp clients, accept source/destination parameters, select clients dynamically, and improve logging/status handling. Also includes client bugfixes/cleanup (typos, error parsing, query params) and expands .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
+# Env e segredos
 .env
+.env.*
+!.env.example
+
+# Banco de dados
+*.db
+*.sqlite
+*.sqlite3
+
+# Go
+/vendor/
+*.exe
+*.test
+*.out
+/bin/
+/dist/
+coverage.out
+coverage.html
+
+# IDE / Editor
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# Logs e temporários
+*.log
+/tmp/
+*.tmp
